# csv-json-cleaner

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
csv_json_cleaner/: __init__.py  __main__.py  cli.py  io.py  pipeline.py  report.py  rules.py  table.py
examples/: crm_export.csv  inventory_semicolon.csv  orders.json
tests/: test_cli.py  test_io.py  test_pipeline.py  test_report.py  test_rules.py
